@@ -1219,11 +1219,14 @@ CREATE TABLE netnodes (
 	divisionid int(11) DEFAULT NULL,
 	address_id int(11) DEFAULT NULL,
 	info text DEFAULT NULL,
+	ownerid int(11) DEFAULT NULL,
 	PRIMARY KEY (id),
 	CONSTRAINT netnodes_address_id_fkey
 		FOREIGN KEY (address_id) REFERENCES addresses (id) ON DELETE SET NULL ON UPDATE CASCADE,
 	FOREIGN KEY (invprojectid) REFERENCES invprojects (id) ON DELETE SET NULL ON UPDATE CASCADE,
-	FOREIGN KEY (divisionid) REFERENCES divisions (id) ON DELETE SET NULL ON UPDATE CASCADE
+	FOREIGN KEY (divisionid) REFERENCES divisions (id) ON DELETE SET NULL ON UPDATE CASCADE,
+	CONSTRAINT netnodes_ownerid_fkey
+		FOREIGN KEY (ownerid) REFERENCES customers (id) ON DELETE SET NULL ON UPDATE CASCADE
 ) ENGINE=INNODB;
 
 # --------------------------------------------------------
@@ -3451,4 +3454,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018091100');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018091300');
