@@ -4131,5 +4131,6 @@ $_LANG['whole day'] = 'cały dzień';
 $_LANG['$a days'] = '$a dni';
 
 $_LANG['Click here to open calendar'] = 'Kliknij tutaj, aby otworzyć kalendarz';
+$_LANG['Owner identifier:'] = 'Identyfikator właściciela:';
 
 ?>
